--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@ant-design/icons": "^5.5.2",
     "antd": "^5.22.2",
     "drizzle-orm": "^0.36.4",
-    "next": "15.0.3",
+    "next": "^14.2.18",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "react": ">=18.0.0",
